Fix Firefox specific spacing bug.

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -51,6 +51,10 @@ body {
 			height: 120%;
 		}
 
+		@-moz-document url-prefix() {
+			padding-top: 6%;
+		}
+
 		.image-container {
 			cursor: pointer;
 			height: 60%;
@@ -58,7 +62,7 @@ body {
 			width: 90%;
 
 			@media (max-width: $breakpoint-tablet) {
-				height: 50%;
+				height: 40%;
 			}
 
 			.image-frame {
@@ -97,6 +101,10 @@ body {
 			height: 30%;
 			justify-content: space-around;
 			width: 96%;
+
+			@-moz-document url-prefix() {
+				height: 50%;
+			}
 
 			@media (max-width: $breakpoint-mobile) {
 				align-items: center;
